# ddtrace/profiling/CMakeLists.txt Builds the profiling _memalloc C++ extension and all profiling Cython extensions.
#
# Inherited from top-level: Python3_*           — from find_package(Python3) PYTHON_EXT_SUFFIX   — Python ABI extension
# suffix DD_FAST_BUILD       — option: trade optimisation for build speed DD_CYTHONIZE        — option: compile .pyx
# files CYTHON_EXECUTABLE   — path to cython binary (when DD_CYTHONIZE=ON) _py_version_hex     — Python sys.hexversion
# value Datadog_INCLUDE_DIRS — Rust-generated C headers (set by top-level after Corrosion) absl::*             — Abseil
# targets dd_wrapper          — shared library target (built by profiling/dd_wrapper/)

# ── ddtrace.profiling.collector._memalloc ──────────────────────────────────── AIDEV-NOTE: _memalloc links against: -
# Abseil (via absl:: targets from FetchContent in the top-level) - dd_wrapper (real CMake target, built by
# profiling/dd_wrapper/ before this file) - Rust-generated C headers under Datadog_INCLUDE_DIRS (set in the top-level)
# The RPATH resolves dd_wrapper at runtime: macOS: @loader_path/../../internal/datadog/profiling Linux:
# $ORIGIN/../../internal/datadog/profiling This matches the installed layout: profiling/collector/_memalloc<suf> and
# profiling/ (dd_wrapper) are siblings two levels up.
if(UNIX AND CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(_memalloc_src "${CMAKE_SOURCE_DIR}/ddtrace/profiling/collector")

    python3_add_library(_memalloc MODULE "${_memalloc_src}/_memalloc.cpp" "${_memalloc_src}/_memalloc_tb.cpp"
                        "${_memalloc_src}/_memalloc_heap.cpp" "${_memalloc_src}/_memalloc_reentrant.cpp")

    target_compile_features(_memalloc PRIVATE cxx_std_20)
    target_compile_options(_memalloc PRIVATE -fPIC -fvisibility=hidden -pthread -Wall -Wextra
                                             $<$<BOOL:${DD_FAST_BUILD}>:-O0>)

    target_compile_definitions(
        _memalloc
        PRIVATE _POSIX_C_SOURCE=200809L
                # NDEBUG for non-debug builds (matches setup.py: not set for Debug mode).
                $<$<NOT:$<CONFIG:Debug>>:NDEBUG> $<$<PLATFORM_ID:Darwin>:_DARWIN_C_SOURCE>)

    target_include_directories(
        _memalloc
        PRIVATE "${_memalloc_src}"
                # profiling_helpers/ (frame_accessors.h, etc.) lives here.
                "${CMAKE_SOURCE_DIR}/ddtrace/internal/datadog/profiling"
                # Rust-generated headers (common.h, profiling.h, etc.) live here.
                "${Datadog_INCLUDE_DIRS}"
                ${Python3_INCLUDE_DIRS})

    # dd_wrapper exposes include/ as PUBLIC, so ddup_interface.hpp etc. propagate.
    target_link_libraries(_memalloc PRIVATE absl::base absl::flat_hash_map absl::strings absl::synchronization
                                            dd_wrapper)

    if(APPLE)
        set_target_properties(_memalloc PROPERTIES INSTALL_RPATH "@loader_path/../../internal/datadog/profiling"
                                                   BUILD_WITH_INSTALL_RPATH TRUE)
    elseif(UNIX)
        set_target_properties(_memalloc PROPERTIES INSTALL_RPATH "$ORIGIN/../../internal/datadog/profiling"
                                                   BUILD_WITH_INSTALL_RPATH TRUE)
    endif()

    set_target_properties(
        _memalloc
        PROPERTIES OUTPUT_NAME "_memalloc"
                   PREFIX ""
                   SUFFIX "${PYTHON_EXT_SUFFIX}")

    # _memalloc headers are generated by the Rust build — ensure it runs first.
    add_dependencies(_memalloc _native)

    install(TARGETS _memalloc LIBRARY DESTINATION "ddtrace/profiling/collector")
endif()

# ── Cython extensions ─────────────────────────────────────────────────────────
if(DD_CYTHONIZE AND CYTHON_EXECUTABLE)
    dd_add_cython_ext(cython_threading "ddtrace/profiling" PYX ddtrace/profiling/_threading.pyx)

    dd_add_cython_ext(cython_task "ddtrace/profiling/collector" PYX ddtrace/profiling/collector/_task.pyx)

    dd_add_cython_ext(cython_exception "ddtrace/profiling/collector" PYX ddtrace/profiling/collector/_exception.pyx)

    dd_add_cython_ext(cython_fast_poisson "ddtrace/profiling/collector" PYX
                      ddtrace/profiling/collector/_fast_poisson.pyx)

    dd_add_cython_ext(cython_sampler "ddtrace/profiling/collector" PYX ddtrace/profiling/collector/_sampler.pyx)

    dd_add_cython_ext(cython_lock "ddtrace/profiling/collector" PYX ddtrace/profiling/collector/_lock.pyx)
endif()
