[package]
name = "ddtrace-core"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }

# TODO: Use latest version tag instead of a specific commit
datadog-ddsketch = { git = "https://github.com/DataDog/libdatadog", rev = "bfeef6d3f079c4f3f191176068353f82d5702b1d" }

[build-dependencies]
pyo3-build-config = "0.21.2"

[lib]
name = "_core"
path = "lib.rs"
crate-type = ["cdylib"]


[net]
# Use git binary from the system instead of the built-in git client
# "Setting this to true can be helpful if you have special authentication requirements that Cargo does not support."
git-fetch-with-cli = true
