[package]
name = "ddtrace-native"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = true
debug = "line-tables-only"
opt-level = 's'
codegen-units = 1

[features]
crashtracker = ["dep:anyhow", "dep:libdd-crashtracker", "dep:pyo3-ffi", "dep:libc", "dep:libdd-common"]
profiling = ["dep:libdd-profiling-ffi"]
ffe = ["dep:datadog-ffe"]
stats = ["dep:libdd-ddsketch"]

[dependencies]
anyhow = { version = "1.0", optional = true }
# `bytes 1.10+` is required for `Bytes::from_owner` (used in http_client to
# wrap PyBackedBytes zero-copy across the GIL release).
bytes = "1.10"
url = "2"
# Low-level libddwaf bindings for the appsec WAF (ddwaf submodule). We bind at the `-sys` level
# (not the high-level `libddwaf` crate, whose raw pointers are `pub(crate)` and unreachable here);
# this also mirrors the C ABI the previous ctypes layer used one-for-one. Default features link
# libddwaf statically into this extension (the `-sys` build script fetches the matching libddwaf
# release at build time, overridable via LIBDDWAF_PREFIX); nothing is shipped/dlopen'd at runtime.
#
# AIDEV-NOTE: temporarily points at a fork branch that vendors the bindgen output
# (crates/libddwaf-sys/src/bindings_prebuilt.rs) so the build needs NO libclang/bindgen. Repoint to
# DataDog/libddwaf-rust once that change is upstreamed (it branches off PR #25 / glopes/2.0.0).
libddwaf-sys = { git = "https://github.com/florentinl/libddwaf-rust", branch = "florentin.labelle/vendor-bindings" }
libc = { version = "0.2", optional = true }
rand = "0.9"
rustc-hash = "1.1"
serde = "1.0"
datadog-ffe = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", optional = true, version = "1.0.0", features = ["pyo3"] }
serde_json = "1.0"
datadog-remote-config = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-tracer-flare = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-crashtracker = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", optional = true }
libdd-ddsketch = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", optional = true }
libdd-library-config = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-log = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-capabilities-impl = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-data-pipeline = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", features = [
  "stats-obfuscation"
] }
libdd-http-client = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-shared-runtime = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
libdd-profiling-ffi = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", optional = true, features = [
    "cbindgen",
] }
libdd-common = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", optional = true }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0" }
pyo3 = { version = "0.28", features = ["extension-module", "anyhow"] }
tracing = { version = "0.1", default-features = false }
pyo3-ffi = { version = "0.28", optional = true }

[build-dependencies]
pyo3-build-config = "0.28"
build_common = { git = "https://github.com/DataDog/libdatadog", rev = "v35.0.0", features = [
    "cbindgen",
] }

[lib]
name = "_native"
path = "lib.rs"
crate-type = ["cdylib"]
