[package]
name = "ddtrace-native"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = true
debug = "line-tables-only"
opt-level = 's'
codegen-units = 1

[features]
crashtracker = ["dep:anyhow", "dep:libdd-crashtracker", "dep:pyo3-ffi", "dep:libc", "dep:libdd-common"]
profiling = ["dep:libdd-profiling-ffi"]
ffe = ["dep:datadog-ffe"]
stats = ["dep:libdd-ddsketch"]

[dependencies]
anyhow = { version = "1.0", optional = true }
# `bytes 1.10+` is required for `Bytes::from_owner` (used in http_client to
# wrap PyBackedBytes zero-copy across the GIL release).
bytes = "1.10"
url = "2"
libc = { version = "0.2", optional = true }
rand = "0.9"
rustc-hash = "1.1"
serde = "1.0"
datadog-ffe = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", optional = true, version = "1.0.0", features = ["pyo3"] }
serde_json = "1.0"
datadog-remote-config = { package = "libdd-remote-config", git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-tracer-flare = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-crashtracker = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", optional = true }
libdd-ddsketch = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", optional = true }
libdd-library-config = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-log = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-capabilities-impl = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-data-pipeline = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", features = [
  "stats-obfuscation"
] }
libdd-http-client = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-shared-runtime = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
libdd-profiling-ffi = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", optional = true, features = [
    "cbindgen",
] }
libdd-common = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", optional = true }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a" }
pyo3 = { version = "0.28", features = ["extension-module", "anyhow"] }
tracing = { version = "0.1", default-features = false }
pyo3-ffi = { version = "0.28", optional = true }

[build-dependencies]
pyo3-build-config = "0.28"
build_common = { git = "https://github.com/DataDog/libdatadog", rev = "d5d4e4262e14cae8dc4e3c72413e39a5e7aa1f8a", features = [
    "cbindgen",
] }

[lib]
name = "_native"
path = "lib.rs"
crate-type = ["cdylib"]
