[package]
name = "ddtrace-native"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = true
debug = "line-tables-only"
opt-level = 's'
codegen-units = 1

[features]
crashtracker = ["dep:libdd-crashtracker", "dep:pyo3-ffi", "dep:libc"]
profiling = ["dep:libdd-profiling-ffi"]
ffe = ["dep:datadog-ffe"]
stats = ["dep:libdd-ddsketch"]

[dependencies]
anyhow = { version = "1.0" }
# `bytes 1.10+` is required for `Bytes::from_owner` (used in http_client to
# wrap PyBackedBytes zero-copy across the GIL release).
bytes = "1.10"
url = "2"
libc = { version = "0.2", optional = true }
rand = "0.9"
rustc-hash = "1.1"
serde = "1.0"
datadog-ffe = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", optional = true, version = "1.0.0", features = ["pyo3"] }
serde_json = "1.0"
datadog-ipc = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", features = ["one_way_shm_futex"] }
libdd-remote-config = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-tracer-flare = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-crashtracker = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", optional = true }
libdd-ddsketch = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", optional = true }
libdd-library-config = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-log = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-capabilities-impl = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-data-pipeline = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", features = [
  "stats-obfuscation"
] }
libdd-http-client = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-shared-runtime = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-profiling-ffi = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", optional = true, features = [
    "cbindgen",
] }
libdd-common = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }
native-proc-macro = { path = "native_proc_macro" }
strum = { version = "0.26", default-features = false }
pyo3 = { version = "0.28", features = ["extension-module", "anyhow"] }
tracing = { version = "0.1", default-features = false }
pyo3-ffi = { version = "0.28", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libdd-library-config = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", features = ["otel-thread-ctx"]}
libdd-otel-thread-ctx = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0" }

[build-dependencies]
pyo3-build-config = "0.28"
build_common = { git = "https://github.com/DataDog/libdatadog", rev = "v37.0.0", features = [
    "cbindgen",
] }

[lib]
name = "_native"
path = "lib.rs"
crate-type = ["cdylib"]
