# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

# Thin cdylib wrapper around libdatadog's `libdd-profiling-heap-gotter` crate
# (published on crates.io). See "Phase 1.5" in
# `ddtrace/native-heap-profiling-roadmap.md`: this dependency was migrated from
# a libdatadog `main` git pin to the published crates.io release.
#
# Why this crate exists (rather than consuming the upstream crate directly):
#   * Building our own cdylib lets us pick a clean `[lib] name` and so sidestep
#     libdatadog's repo-wide `liblib*.so` double-prefix convention: the output
#     is simply `libdd_heap_gotter.so`.
#   * It lets us expose a stable, ddtrace-owned C ABI (`ddtrace_heap_gotter_*`)
#     over the upstream crate's pure-Rust API, so the Python ctypes activator
#     links against fixed, unmangled symbol names and gets a plain `bool`.
#
# Allocation-only is the default: the `live-heap` cargo feature is OFF unless
# explicitly selected (setup.py forwards it when DD_PROFILING_NATIVE_HEAP_LIVE
# is set), so the free-path USDT (`ddheap:free`) and its per-free overhead stay
# compiled out of the default wheel. Selecting `live-heap` (Phase 2) turns on
# the free interposition's USDT + per-allocation retain flagging by forwarding
# to `libdd-profiling-heap-gotter/live-heap` (see the [features] block below).
[package]
name = "ddtrace-heap-gotter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Produces `libdd_heap_gotter.so` (single `lib` prefix, unlike the upstream
# `liblibdd_profiling_heap_gotter.so`). setup.py renames it to carry the
# Python EXT_SUFFIX before placing it under ddtrace/internal/datadog/profiling.
name = "dd_heap_gotter"
path = "lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
debug = "line-tables-only"
codegen-units = 1

[features]
# Forwards to the upstream crate's test-support surface so integration tests can
# assert the patched GOT hooks actually ran (hit counter) without needing a
# live eBPF uprobe attach. Never enabled for shipped wheels.
test-support = ["libdd-profiling-heap-gotter/test-support"]

# AIDEV-NOTE: live-heap (Phase 2) is a *build-time* feature, not a runtime knob.
# It forwards to libdd-profiling-heap-gotter/live-heap, which forwards to
# libdd-profiling-heap-sampler/live-heap, whose build.rs turns the
# CARGO_FEATURE_LIVE_HEAP cargo feature into the C define DD_HEAP_LIVE_TRACKING=1.
# That define is what makes (a) dd_probe_free actually emit the `ddheap:free`
# USDT (otherwise the note is absent from .note.stapsdt) and (b) the alloc side
# stamp the per-allocation sample flag so the free side can reconcile it. The
# `free` GOT hook itself is always interposed upstream; the feature only decides
# whether the free path emits the retain-tracking USDT. Because the presence of
# the `ddheap:free` ELF note is a property of the compiled artifact, this MUST be
# selected at build time (setup.py, via DD_PROFILING_NATIVE_HEAP_LIVE) and cannot
# be flipped by the Python activator at runtime. Leaving it off keeps the
# alloc-only wheel byte-for-byte unchanged.
live-heap = ["libdd-profiling-heap-gotter/live-heap"]

[dependencies]
# Pinned to the published crates.io release (Phase 1.5 migration off the
# libdatadog `main` git pin). `default-features = false` keeps the
# allocation-only surface: `live-heap` stays opt-in and off for Phase 1.
libdd-profiling-heap-gotter = { version = "1.0.0", default-features = false }
